npds.free.fr

Site Change Log:

27/12/2018 (Grant Hutchinson)
	* Updated tracker and server listings on /trackers/index.html

11/11/2017 (Grant Hutchinson)
	* Updated tracker and server listings on /trackers/index.html

02/06/2016 (Grant Hutchinson)
	* Updated GIF Server Read Me with additional release details

05/02/2016 (Grant Hutchinson)
	* Added Pawel Piotrowski's server to /trackers/index.html

02/11/2015 (Grant Hutchinson)
	* Updated and edited mailing list instructions on /list/index.html

29/10/2015 (Grant Hutchinson)
	* Added Greg Goodwin's server to /trackers/index.html
	* Simplified tracker and server URLs on /trackers/index.html

15/01/2015 (Grant Hutchinson)
	* Reenabled viewing of directories without indexes

07/09/2014	[Grant Hutchinson]
	* Added Sylvain Pilet's server to /trackers/index.html

11/08/2014	[Grant Hutchinson]
	* Added Peter Geremia's server to /trackers/index.html
	* Removed all currently offline tracker servers

07/01/2014	[Grant Hutchinson]
	* Updated all copyright notices to be year agnostic

23/10/2013	[Grant Hutchinson]
	* Finally removed the stupid webring navigation code

03/04/2013	[Grant Hutchinson]
	* Fixed duplicate anchor on /modules/index.html
	* Updated the copyright notice, finally

02/09/2012	[Grant Hutchinson]
	* Updated tracker server information on /trackers/index.html

01/01/2012	[Grant Hutchinson]
	* Updated the copyright notice

15/01/2011	[Grant Hutchinson]
	* Updated the copyright notice
	* Added Glenn Baggott's server to /trackers/index.html
	* Added Tony Kan's server to /trackers/index.html

08/12/2010	[Grant Hutchinson]
	* Updated tracker server information on /trackers/index.html

08/09/2010	[Grant Hutchinson]
	* Updated link to Matt Vaughn's site on the home page

02/01/2010	[Grant Hutchinson]
	* Updated the copyright notice

05/12/2009	[Grant Hutchinson]
	* Added redirect handlers for a couple of old legacy pages
	* Finally got the pretty icons working for module directory listings
