@@ -51,6 +51,11 @@
 		<h2 id="other">Individual NPDS Servers</h2>
 		<p>In addition to the NPDS-enabled Newtons listed on the tracker servers, there are often other independent servers which do not or cannot get tracked. This can be caused port filtering or other firewall restrictions on the host network. Regardless of the cause, we&#8217;ll try to list those servers here.</p>
 		
+		<ul>
+			<li><strong>OldServers</strong><br />
+			<a href="http://oldservers.ddns.net:1997/">oldservers.ddns.net:1997</a></li>
+		</ul>
+		
 		</div>
 	
 		<div id="footer">
